--- a/jeu ski de fond/athletes.html
+++ b/jeu ski de fond/athletes.html
@@ -8,6 +8,8 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+  <h1> ATHLÈTES </h1>
+  
   <div class="athletes-container" id="athletes-container">
     <!-- Les cartes d'athlètes seront ajoutées dynamiquement ici -->
   </div>
