--- a/jeu ski de fond/main-menu.html
+++ b/jeu ski de fond/main-menu.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="main-menu">
-    <h1>Jeu de Ski de Fond</h1>
+    <h1>SAMSE 25</h1>
     <button onclick="showMenu('play')">Jouer</button>
     <button onclick="window.location.href='pistes.html'">Pistes</button>
 	<button onclick="window.location.href='athletes.html'">Athlètes</button>
